{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 54,
  "lineage": "db4509d4-f2ed-f835-9cc1-2da54ba04efb",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044931854922:network-acl/acl-03b92ebdbe65cdff4",
            "default_network_acl_id": "acl-03b92ebdbe65cdff4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03b92ebdbe65cdff4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "044931854922",
            "subnet_ids": [
              "subnet-05fa1ec5649a1993b",
              "subnet-063d3e5ed43c1b801",
              "subnet-0645c9e4405a94d07",
              "subnet-071b6aea0455e9c0d",
              "subnet-0ad9eeb425bdb064a",
              "subnet-0cba5c11058b25708"
            ],
            "tags": {
              "Name": "geico-prod-myvpc-default",
              "environment": "dev",
              "owner": "sairam"
            },
            "tags_all": {
              "Name": "geico-prod-myvpc-default",
              "environment": "dev",
              "owner": "sairam"
            },
            "vpc_id": "vpc-001cbc3fd4ab73306"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044931854922:route-table/rtb-0d6000229a34e4944",
            "default_route_table_id": "rtb-0d6000229a34e4944",
            "id": "rtb-0d6000229a34e4944",
            "owner_id": "044931854922",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "geico-prod-myvpc-default",
              "environment": "dev",
              "owner": "sairam"
            },
            "tags_all": {
              "Name": "geico-prod-myvpc-default",
              "environment": "dev",
              "owner": "sairam"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-001cbc3fd4ab73306"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044931854922:security-group/sg-02f151ba057f304e2",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02f151ba057f304e2",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "044931854922",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "geico-prod-myvpc-default",
              "environment": "dev",
              "owner": "sairam"
            },
            "tags_all": {
              "Name": "geico-prod-myvpc-default",
              "environment": "dev",
              "owner": "sairam"
            },
            "vpc_id": "vpc-001cbc3fd4ab73306"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3f99986c8e8bdd9",
            "domain": "vpc",
            "id": "eipalloc-0c3f99986c8e8bdd9",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-233-26-5.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.26.5",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "geico-prod-myvpc-ap-south-1a",
              "environment": "dev",
              "owner": "sairam"
            },
            "tags_all": {
              "Name": "geico-prod-myvpc-ap-south-1a",
              "environment": "dev",
              "owner": "sairam"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044931854922:internet-gateway/igw-0c224b805faa18da4",
            "id": "igw-0c224b805faa18da4",
            "owner_id": "044931854922",
            "tags": {
              "Name": "geico-prod-myvpc",
              "environment": "dev",
              "owner": "sairam"
            },
            "tags_all": {
              "Name": "geico-prod-myvpc",
              "environment": "dev",
              "owner": "sairam"
            },
            "vpc_id": "vpc-001cbc3fd4ab73306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3f99986c8e8bdd9",
            "association_id": "eipassoc-032111b6e0fc9e776",
            "connectivity_type": "public",
            "id": "nat-08ed67add9b7bcdc0",
            "network_interface_id": "eni-06d86f6a0af87fa60",
            "private_ip": "10.0.101.167",
            "public_ip": "13.233.26.5",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ad9eeb425bdb064a",
            "tags": {
              "Name": "geico-prod-myvpc-ap-south-1a",
              "environment": "dev",
              "owner": "sairam"
            },
            "tags_all": {
              "Name": "geico-prod-myvpc-ap-south-1a",
              "environment": "dev",
              "owner": "sairam"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0912d62ea5edf6d021080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08ed67add9b7bcdc0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0912d62ea5edf6d02",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c224b805faa18da4",
            "id": "r-rtb-0aa5380acecbab9f91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aa5380acecbab9f9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044931854922:route-table/rtb-01f95c548c9f42f74",
            "id": "rtb-01f95c548c9f42f74",
            "owner_id": "044931854922",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "geico-prod-myvpc-db",
              "environment": "dev",
              "owner": "sairam"
            },
            "tags_all": {
              "Name": "geico-prod-myvpc-db",
              "environment": "dev",
              "owner": "sairam"
            },
            "timeouts": null,
            "vpc_id": "vpc-001cbc3fd4ab73306"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044931854922:route-table/rtb-0912d62ea5edf6d02",
            "id": "rtb-0912d62ea5edf6d02",
            "owner_id": "044931854922",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "geico-prod-myvpc-private",
              "environment": "dev",
              "owner": "sairam"
            },
            "tags_all": {
              "Name": "geico-prod-myvpc-private",
              "environment": "dev",
              "owner": "sairam"
            },
            "timeouts": null,
            "vpc_id": "vpc-001cbc3fd4ab73306"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044931854922:route-table/rtb-0aa5380acecbab9f9",
            "id": "rtb-0aa5380acecbab9f9",
            "owner_id": "044931854922",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "geico-prod-myvpc-public",
              "environment": "dev",
              "owner": "sairam"
            },
            "tags_all": {
              "Name": "geico-prod-myvpc-public",
              "environment": "dev",
              "owner": "sairam"
            },
            "timeouts": null,
            "vpc_id": "vpc-001cbc3fd4ab73306"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086f08a4b69bfcd39",
            "route_table_id": "rtb-01f95c548c9f42f74",
            "subnet_id": "subnet-0645c9e4405a94d07"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078ed58343b2db375",
            "route_table_id": "rtb-01f95c548c9f42f74",
            "subnet_id": "subnet-063d3e5ed43c1b801"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8ce763646465369",
            "route_table_id": "rtb-0912d62ea5edf6d02",
            "subnet_id": "subnet-0cba5c11058b25708"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f53f35bf1800e80",
            "route_table_id": "rtb-0912d62ea5edf6d02",
            "subnet_id": "subnet-071b6aea0455e9c0d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d78a9b6b46a7d7bd",
            "route_table_id": "rtb-0aa5380acecbab9f9",
            "subnet_id": "subnet-0ad9eeb425bdb064a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00343e40e904b9863",
            "route_table_id": "rtb-0aa5380acecbab9f9",
            "subnet_id": "subnet-05fa1ec5649a1993b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044931854922:subnet/subnet-0645c9e4405a94d07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0645c9e4405a94d07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044931854922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "geico-prod-myvpc-db-ap-south-1a",
              "Type": "Private-Database-Subnets",
              "environment": "dev",
              "owner": "sairam"
            },
            "tags_all": {
              "Name": "geico-prod-myvpc-db-ap-south-1a",
              "Type": "Private-Database-Subnets",
              "environment": "dev",
              "owner": "sairam"
            },
            "vpc_id": "vpc-001cbc3fd4ab73306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044931854922:subnet/subnet-063d3e5ed43c1b801",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063d3e5ed43c1b801",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044931854922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "geico-prod-myvpc-db-ap-south-1b",
              "Type": "Private-Database-Subnets",
              "environment": "dev",
              "owner": "sairam"
            },
            "tags_all": {
              "Name": "geico-prod-myvpc-db-ap-south-1b",
              "Type": "Private-Database-Subnets",
              "environment": "dev",
              "owner": "sairam"
            },
            "vpc_id": "vpc-001cbc3fd4ab73306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044931854922:subnet/subnet-0cba5c11058b25708",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cba5c11058b25708",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044931854922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "geico-prod-myvpc-private-ap-south-1a",
              "Type": "Private-Subnets",
              "environment": "dev",
              "owner": "sairam"
            },
            "tags_all": {
              "Name": "geico-prod-myvpc-private-ap-south-1a",
              "Type": "Private-Subnets",
              "environment": "dev",
              "owner": "sairam"
            },
            "vpc_id": "vpc-001cbc3fd4ab73306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044931854922:subnet/subnet-071b6aea0455e9c0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071b6aea0455e9c0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044931854922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "geico-prod-myvpc-private-ap-south-1b",
              "Type": "Private-Subnets",
              "environment": "dev",
              "owner": "sairam"
            },
            "tags_all": {
              "Name": "geico-prod-myvpc-private-ap-south-1b",
              "Type": "Private-Subnets",
              "environment": "dev",
              "owner": "sairam"
            },
            "vpc_id": "vpc-001cbc3fd4ab73306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044931854922:subnet/subnet-0ad9eeb425bdb064a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad9eeb425bdb064a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044931854922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "geico-prod-myvpc-public-ap-south-1a",
              "Type": "Public-Subnets",
              "environment": "dev",
              "owner": "sairam"
            },
            "tags_all": {
              "Name": "geico-prod-myvpc-public-ap-south-1a",
              "Type": "Public-Subnets",
              "environment": "dev",
              "owner": "sairam"
            },
            "vpc_id": "vpc-001cbc3fd4ab73306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044931854922:subnet/subnet-05fa1ec5649a1993b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fa1ec5649a1993b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044931854922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "geico-prod-myvpc-public-ap-south-1b",
              "Type": "Public-Subnets",
              "environment": "dev",
              "owner": "sairam"
            },
            "tags_all": {
              "Name": "geico-prod-myvpc-public-ap-south-1b",
              "Type": "Public-Subnets",
              "environment": "dev",
              "owner": "sairam"
            },
            "vpc_id": "vpc-001cbc3fd4ab73306"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044931854922:vpc/vpc-001cbc3fd4ab73306",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03b92ebdbe65cdff4",
            "default_route_table_id": "rtb-0d6000229a34e4944",
            "default_security_group_id": "sg-02f151ba057f304e2",
            "dhcp_options_id": "dopt-0411b53e9416bbbbb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001cbc3fd4ab73306",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6000229a34e4944",
            "owner_id": "044931854922",
            "tags": {
              "Name": "vpc-dev",
              "environment": "dev",
              "owner": "sairam"
            },
            "tags_all": {
              "Name": "vpc-dev",
              "environment": "dev",
              "owner": "sairam"
            }
          }
        }
      ]
    }
  ]
}